# repo

./: .devcontainer.json  .gitignore  CLAUDE.md  EXPERIMENT_LOG.txt  EXPERIMENT_LOG_V2.txt  LICENSE  MOTIVATIONS.md  PROMPT.md  PROMPT2.md  README.md  dl_ga_scaling_v2.py  pyproject.toml  renovate.json  requirements.txt  scaling_results_v2.pkl
.claude/: settings.local.json
.github/workflows/: format-lint.yaml  on-pr.yaml  on-push.yaml
.specify/memory/: constitution.md
code/: AGENTS.md  CLAUDE.md  DESCRIPTION.md  MAIN.md
code/core/: AGENTS.md  MAIN.md  MOTIVATIONS.md
code/core/deeplearning/: AGENTS.md  MAIN.md
code/core/neuroevolution/: AGENTS.md  DYNAMIC NETWORKS.md  MAIN PROMPT.md  MAIN.md  PROMPT.md  cartpole_neuroevo_mvp.py  cartpole_static_mvp.py
code/core/neuroevolving/: -----MOTIVATIONS.md
code/core/neuroevolving/old_snippets/: PRUNE.md
code/neuroevolution/: -----MOTIVATIONS.md  ----MAIN.md  ---III.1.A.DYNAMIC_NETWORKS.md  --PROMPT.md  -GOTCHAS.md  AGENTS.md  CLAUDE.md  cartpole_static_mvp.py
code/neuroevolution/old_snippets/: IMITATE.md
code/neuroevolution/old_snippets/dynamic_nets/: node.py
code/novelty/: CLAUDE.md  genetic_mlp.py
code/projects/cneuromod_data_loading/: AGENTS.md
code/projects/fmri_emotion_modeling/: MAIN.md
code/projects/scaling_bc_to_perfection/: -----STEPS.md  ----MAIN.md  --PROMPT.md  -GOTCHAS.md  AGENTS.md  CLAUDE.md  PROJECT PROPOSAL.md  PROJECT_PROPOSAL.md  PROMPT.md  train_bc.py
code/projects/scaling_to_perfection/: AGENTS.md
code/stage1/: CLAUDE.md
code/stage2/: CLAUDE.md  cuda_check.ipynb  genetic_mlp.py
code/stage2/net/: CLAUDE.md
code/utils/: runner.py
common/: config.py  old_gen_transfer.py  old_imitate.py  runner.py  store.py
common/dynamic_net/: __init__.py  computation.py  evolution.py
common/utils/: beartype.py  hydra_zen.py  misc.py  torch.py
data/: cartpole_collect.py  cartpole_replay.py  collect.py  replay.py
docker/: cpu  cuda  rocm
experiments/: 6167_REPORT.md  REPORT.md
experiments/1_dl_vs_ga_scaling_dataset_size_flops/: dl_ga_scaling_experiment.py  main.py  scaling_results.pkl
experiments/2_dl_vs_ga_es/: cartpole.txt  experiment_1.py  lunarlander.txt  main.py  script.sh
experiments/3_cl_info_dl_vs_ga/: config.py  data.py  main.py  metrics.py  models.py  plotting.py  script.sh  training.py  utils.py
experiments/3_cl_info_dl_vs_ga/src/: config.py  data.py  evaluation.py  optim.py  plot.py  utils.py
experiments/4_add_recurrence/: CLAUDE.md
experiments/5_adversarial_imitation/: CLAUDE.md
neuroevolution/: ----MAIN.md  --PROMPT.md  CLAUDE.md  PROMPTS.md  __init__.py  dynamic_net.py
neuroevolution/dynamic_net/: __init__.py  computation.py  computation.txt  evolution.py
neuroevolution/dynamic_networks/: CLAUDE.md  node.py
neuroevolution/old_snippets/: imitate.py
neuroevolution/old_snippets/dynamic_nets/: net.py
orchestrator/: CLAUDE.md  debug_runner.py  orchestrator.py  orchestrator_state.json  utils.py
projects/neuroevolution/: main.py
projects/scaling_bc_to_perfection/: ----PROJECT_PROPOSAL.md  --PROMPT.md  -GOTCHAS.md  CLAUDE.md  orchestrator.py  orchestrator_state.json
projects/scaling_bc_to_perfection/experiment_1/: cartpole.txt  experiment_1.py  lunarlander.txt  tasks.txt
prompts/: 1.md
utils/: beartype.py
